--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
             <div  class="ms-4 mb-5">
                 <img src="assets/icones_contact/icon_siteWeb.png" alt="icone du réseau social Behance" class="icons">
-                <a href="https://www.instagram.com/charlemagne.minimal/" target="_blank" class="link_reseaux">Découvrir la suite</a>
+                <a href="https://jbcharlemagne.github.io/portfolio1" target="_blank" class="link_reseaux">Découvrir la suite</a>
                 </div>
         </div>
         <div class="vert col-2 border-end border-5 border-dark"></div>
