correction lien et top 2

--- a/projets.html
+++ b/projets.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav id="top" class="navbar navbar-expand-lg sticky-top bg-light border-top border-bottom border-5 border-dark" id="top">
+    <nav class="navbar navbar-expand-lg sticky-top bg-light border-top border-bottom border-5 border-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Accueil</a>
         </div>
@@ -218,7 +218,7 @@
 
 <!--FOOTER-->
     <footer class="footer border border-5 border-dark p-5 d-flex justify-content-end">
-        <a href="#top">
+        <a href="#mona_margaux">
             <button type="button" class="btn btn-primary">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-arrow-90deg-up buttonTopWhite" viewBox="0 0 16 16">
