--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav id="top" class="navbar navbar-expand-lg sticky-top bg-light border-top border-start border-end border-bottom border-5 border-dark" id="top">
+    <nav class="navbar navbar-expand-lg sticky-top bg-light border-top border-start border-end border-bottom border-5 border-dark">
         <div class="container-fluid">
             <a class="navbar-brand fw-bold" href="index.html">Jean-Baptiste Charlemagne</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -39,7 +39,7 @@
         </div>
     </nav>
 <!--INTRO-->
-    <div class="parcours row">
+    <div id="top" class="parcours row">
         <div class="vert col-2 border-start border-5 border-dark"></div>
         <div class="col-10 m-0 p-0">
             <p class="border-bottom border-end border-start border-5 border-dark p-4 fs-5 ">Bienvenue dans mon portfolio Bootstrap, un espace dédié à mes créations graphiques personelles et professionnelles.</p>
@@ -104,7 +104,7 @@
         </span>
     </section>
 
-        <!--ILLUSTRATIONS DIVERSES-->
+    <!--ILLUSTRATIONS DIVERSES-->
     <section class="test-1 row g-0">
         <span class="violet col-2 border-bottom border-start border-5 border-dark"></span>
         <span class="border-end border-start border-top border-5 border-dark col-5"><img src="assets/illustrations_diverse/DIVA9_web.jpg" class="img-fluid"></span>
@@ -169,7 +169,7 @@
             </div>
             <div  class="ms-4 mb-5">
                 <img src="assets/icones_contact/icon_siteWeb.png" alt="icone du réseau social Behance" class="icons">
-                <a href="https://jbcharlemagne.github.io/portfolio1" target="_blank" class="link_reseaux">Découvrir la suite</a>
+                <a href="https://jbcharlemagne.github.io/portfolio_beauxarts" target="_blank" class="link_reseaux">Découvrir la suite</a>
                 </div>
         </div>
         <div class="vert col-2 border-end border-5 border-dark"></div>
