suppression class img_first et margin bouton CV

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="col-8 border-end border-5 border-dark text-start">
             <h3 class="mt-5">Graphiste & Designer UI/UX</h3>
             <p class="fs-4">Implanté à Paris et diplômé du Titre professionnel Concepteur Desginer UI, je suis habitué de la création et à multiplier mes médiums. Je suis également passionné par photographie minimale.</p>
-            <a class="btn btn-primary mt-4" href="cv.html" role="button">Voir mon CV</a>
+            <a class="btn btn-primary m-4" href="cv.html" role="button">Voir mon CV</a>
         </div>
         <div class="jaune col-2 border-end border-5 border-dark d-flex justify-content-center"><img src="assets/photo_aPropos/sélection02.jpg" alt="portrait de Jean-Baptiste Charlemagne" class="img-fluid img-fluid_2 m-3"></div>
     </div>
