--- a/projets.html
+++ b/projets.html
@@ -51,13 +51,13 @@
     <!--Mockup-->
     <section class="row g-0">
         <span class="violet col-2"></span>
-        <span class="col-5 border-end border-bottom border-start border-5 border-dark"><img src="assets/moga/mock01_1:2.jpg" class="img-fluid img_first"></span>
+        <span class="col-5 border-end border-bottom border-start border-5 border-dark"><img src="assets/moga/mock01_1:2.jpg" class="img-fluid"></span>
         <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/moga/mock01_2:2.jpg" class="img-fluid"></span>
     </section>
     <!--Brief-->
     <section class="row g-0">
         <span class="violet col-2"></span>
-        <span class="col-2 border-start border-5 border-dark"><img src="assets/moga/brief01.jpg" class="img-fluid img_first"></span>
+        <span class="col-2 border-start border-5 border-dark"><img src="assets/moga/brief01.jpg" class="img-fluid"></span>
         <span class="col-2 border-start border-5 border-dark"><img src="assets/moga/brief02.jpg" class="img-fluid"></span>
         <span class="col-2 border-start border-5 border-dark"><img src="assets/moga/brief03.jpg" class="img-fluid"></span>
         <span class="col-2 border-start border-5 border-dark"><img src="assets/moga/brief04.jpg" class="img-fluid"></span>
@@ -119,7 +119,7 @@
     <section class="row col-12 g-0">
         <span class="violet col-3"></span>
         <span class="first col-3 border-end border-bottom border-start border-5 border-dark"><img
-                src="assets/illustrations_manu/chris_web.jpg" class="img-fluid img_first"></span>
+                src="assets/illustrations_manu/chris_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_manu/eliot_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
@@ -129,7 +129,7 @@
     <section class="row col-12 g-0">
         <span class="violet col-3"></span>
         <span class="col-3 border-end border-bottom border-start border-5 border-dark"><img
-                src="assets/illustrations_manu/yoda_web.jpg" class="img-fluid img_first"></span>
+                src="assets/illustrations_manu/yoda_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_manu/darth-vador_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
@@ -159,7 +159,7 @@
     <section class="row col-12 g-0">
         <span class="violet col-3"></span>
         <span class="first col-3 border-end border-bottom border-start border-5 border-dark"><img
-                src="assets/illustrations_diverse/Rope01_web.jpg" class="img-fluid img_first"></span>
+                src="assets/illustrations_diverse/Rope01_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/Rope02_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
@@ -169,7 +169,7 @@
     <section class="row col-12 g-0">
         <span class="violet col-3"></span>
         <span class="col-3 border-end border-bottom border-start border-5 border-dark"><img
-                src="assets/illustrations_diverse/STOP01_web.jpg" class="img-fluid img_first"></span>
+                src="assets/illustrations_diverse/STOP01_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/STOP02_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
@@ -179,7 +179,7 @@
     <section class="row col-12 g-0">
         <span class="first violet col-3"></span>
         <span class="col-3 border-end border-bottom border-start border-5 border-dark"><img
-                src="assets/illustrations_diverse/SW01_web.jpg" class="img-fluid img_first"></span>
+                src="assets/illustrations_diverse/SW01_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/SW02_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
@@ -199,7 +199,7 @@
     <section class="row col-12 g-0">
         <span class="first violet col-3"></span>
         <span class="col-3 border-end border-start border-bottom border-5 border-dark"><img
-                src="assets/texture/exercice-plastique1_web.jpg" class="img-fluid img_first"></span>
+                src="assets/texture/exercice-plastique1_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/texture/exercice-plastique2_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><img
@@ -209,7 +209,7 @@
     <section class="row col-12 g-0">
         <span class="first violet col-3"></span>
         <span class="col-3 border-end border-start border-5 border-dark"><img
-                src="assets/texture/alu01_web.jpg" class="img-fluid img_first"></span>
+                src="assets/texture/alu01_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-5 border-dark"><img
                 src="assets/texture/plastic02_01_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-5 border-dark"><img
