ajustement responsive 1 sur index, reprise de la structure global

--- a/index.html
+++ b/index.html
@@ -49,80 +49,107 @@
     <div class="parcours row">
         <div class="vert col-2 border-bottom border-start border-5 border-dark"></div> 
         <div class="col-10 m-0 p-0">
-            <p class="border-start border-bottom border-5 border-dark p-4 fs-5 fw-bold">À la recherche d'un contrat de
-            professionnalisation en agence de design pour septembre 2023 : Certification profesionnelle Concepteur Réalisateur Graphique à
+            <p class="border-start border-bottom border-end border-5 border-dark p-4 fs-5 fw-bold">À la recherche d'un contrat de professionnalisation en agence de design pour septembre 2023 : Certification profesionnelle Concepteur Réalisateur Graphique à
             Gobelins, l'École de l'image</p>
         </div>
     </div>
    
     
 <!--PROJETS -->
-    <h2 class="border-bottom border-start border-5 border-dark p-2" id="projets">Projets</h2>
+    <h2 class="border-bottom border-start border-end border-5 border-dark p-2" id="projets">Projets</h2>
 
     <!--MONA MARGAUX-->
-    <section class="test-2 row g-0">
-        <span class="violet col-2 border-start border-5 border-dark"></span>
-        <span class="border-end border-start border-5 border-dark col-5"><img
-                src="assets/mm/x36-49 copie.png" class="img-fluid"></span>
-        <span class="col-5 d-flex flex-column justify-content-center align-items-center text-center border-bottom border-end border-5 border-dark p-5">
+    <section class="row g-0">
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-10 d-flex flex-column justify-content-center align-items-center text-center p-5 border-bottom border-end border-5 border-dark">
             <h3>MONA MARGAUX</h3>
             <p>[EN COURS] Projet de diplôme pour le titre profesionnel Concepteur Designer UI préparé à La Manu, l'École des Métiers du Numérique. Passage du titre le 06 avril 2023.</p>
             <a class="btn btn-primary mt-3" href="projets.html#mona_margaux" role="button">Voir la suite</a>
         </span>
     </section>
+    <section class="row g-0 ">
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
+        <span class=" col-8 border-bottom border-5 border-dark"><img
+                src="assets/mm/x36-49 copie.png" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
+    </section>
+    
 
     <!--Moga studio-->
     <section class="row g-0">
-        <span class="violet col-2 border-start border-5 border-dark"></span>
-        <span class="border-end border-start border-top border-5 border-dark col-5"><img src="assets/moga/mock01_1:2.jpg" class="img-fluid img_first"></span>
-        <span class="col-5 d-flex flex-column justify-content-center align-items-center text-center border-bottom border-end border-5 border-dark p-5">
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-10 d-flex flex-column justify-content-center align-items-center text-center 
+        p-5 border-bottom border-end border-5 border-dark">
             <h3>Moga Studio</h3>
             <p>Identité visuelle de l'initiative Moga Studio</p>
             <a class="btn btn-primary mt-3" href="projets.html#moga_studio" role="button">Voir la suite</a>
         </span>
     </section>
+    <section class="row g-0">
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
+        <span class="col-8 border-bottom border-5 border-dark"><img src="assets/moga/mock01_1:2.jpg" class="img-fluid img_first"></span>
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
+    </section>
+   
 
     <!--Phile-->
-    <section class="test-3 row g-0">
-        <span class="violet col-2 border-start border-5 border-dark"></span>
-        <span class="border-end border-start border-top border-5 border-dark col-5"><img src="assets/DET/DET-bootstrap_couv.jpg" class="img-fluid"></span>
-        <span class="col-5 d-flex flex-column justify-content-center align-items-center text-center border-bottom border-end border-5 border-dark p-5">
+    <section class="row g-0">
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-10 d-flex flex-column justify-content-center align-items-center text-center p-5 border-bottom border-end border-5 border-dark">
             <h3>à un phile</h3>
             <p>Création visuelle et accompagnement en mise en scène</p>
             <a class="btn btn-primary mt-3" href="projets.html#a_un_phile" role="button">Voir la suite</a>
         </span>
     </section>
+    <section class="row g-0">
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
+        <span class="col-8 border-bottom border-5 border-dark"><img src="assets/DET/DET-bootstrap_couv.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
+    </section>
 
      <!--ILLUSTRATIONS MANU-->
-     <section class="test-1 row g-0">
-        <span class="violet col-2 border-bottom borderstart border-5 border-dark"></span>
-        <span class="border-end border-start border-top border-5 border-dark col-5"><img src="assets/illustrations_manu/eliot_web.jpg" class="img-fluid"></span>
-        <span class="col-5 d-flex flex-column justify-content-center align-items-center text-center border-bottom border-end border-5 border-dark p-5">
+    <section class="row g-0">
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-10 d-flex flex-column justify-content-center align-items-center text-center p-5 border-bottom border-end border-5 border-dark">
             <h3>Illustrations diverses</h3>
             <p>Illustrations réalisées en formation en 2023</p>
             <a class="btn btn-primary mt-3" href="projets.html#illustrations_manu" role="button">Voir la suite</a>
         </span>
     </section>
+     <section class="row g-0">
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
+        <span class="col-8 border-bottom border-5 border-dark"><img src="assets/illustrations_manu/eliot_web.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
+    </section>
 
     <!--ILLUSTRATIONS DIVERSES-->
     <section class="test-1 row g-0">
-        <span class="violet col-2 border-bottom border-start border-5 border-dark"></span>
-        <span class="border-end border-start border-top border-5 border-dark col-5"><img src="assets/illustrations_diverse/DIVA9_web.jpg" class="img-fluid"></span>
-        <span class="col-5 d-flex flex-column justify-content-center align-items-center text-center border-bottom border-end border-5 border-dark p-5">
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-10 d-flex flex-column justify-content-center align-items-center text-center p-5 border-bottom border-end border-5 border-dark">
             <h3>Illustrations diverses</h3>
             <p>Créations spontanées d'illustrations réalisées en 2022</p>
             <a class="btn btn-primary mt-3" href="projets.html#illustrations_diverses" role="button">Voir la suite</a>
         </span>
     </section>
+    <section class="test-1 row g-0">
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
+        <span class="col-8 border-bottom border-5 border-dark"><img src="assets/illustrations_diverse/DIVA9_web.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
+    </section>
 
     <!--TEXTURE-->
-    <section class="test-1 row g-0">
-        <span class="violet col-2 border-bottom border-start border-5 border-dark"></span>
-        <span class="border border-5 border-dark col-5"><img src="assets/texture/exercice-plastique1_web.jpg" class="img-fluid"></span>
-        <span class="col-5 d-flex flex-column justify-content-center align-items-center text-center border-bottom border-end border-5 border-dark p-5">
+
+    <section class="row g-0">
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-10 d-flex flex-column justify-content-center align-items-center text-center p-5 border-bottom border-5 border-dark">
             <h3>Recherches Textures</h3>
             <a class="btn btn-primary mt-3" href="projets.html#texture" role="button">Voir la suite</a>
         </span>
+    </section>
+    <section class="row g-0">
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
+        <span class="col-8 border-bottom border-5 border-dark"><img src="assets/texture/exercice-plastique1_web.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
     </section>
 
 
@@ -133,10 +160,10 @@
         <div class="jaune col-2 border-start border-end border-5 border-dark"></div>
         <div class="col-8 border-end border-5 border-dark text-start">
             <h3 class="mt-5">Graphiste & Designer UI/UX</h3>
-            <p class="fs-4">Implanté à Paris et diplômé du Titre professionnel Concepteur Desginer UI, je suis habitué de la création et à multiplier mes médiums. Je suis également passionné par photographie minimale.</p>
+            <p class="fs-6">Implanté à Paris et diplômé du Titre professionnel Concepteur Desginer UI, je suis habitué de la création et à multiplier mes médiums. Je suis également passionné par photographie minimale.</p>
             <a class="btn btn-primary m-4" href="cv.html" role="button">Voir mon CV</a>
         </div>
-        <div class="jaune col-2 border-end border-5 border-dark d-flex justify-content-center"><img src="assets/photo_aPropos/sélection02.jpg" alt="portrait de Jean-Baptiste Charlemagne" class="img-fluid img-fluid_2 m-3"></div>
+        <div class="jaune col-2 d-flex align-items-center border-end border-5 border-dark"><img src="assets/photo_aPropos/sélection02.jpg" alt="portrait de Jean-Baptiste Charlemagne" class="img-fluid p-2"></div>
     </div>
 
 
@@ -150,7 +177,7 @@
             <div class="ms-4 mb-2">
                 <img src="assets/icones_contact/icons_linkedin.png" alt="icone du réseau social Linkedin" class="icons">
                 <a href="https://www.linkedin.com/in/jbcharlemagne/" target="_blank" class="link_reseaux">Mon profil Linkedin</a>
-            </div class="ms-4 ">
+            </div>
             <div class="ms-4 mb-2">
                 <img src="assets/icones_contact/icon_Instagram.png" alt="icone du réseau social Instagram" class="icons">
                 <a href="https://www.instagram.com/jb.charlemagne/" target="_blank" class="link_reseaux">Mon profil Instagram</a>
