ajustement responsive et border sur projet / cv // retouche index // changement photo logo mona

--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,7 @@
     </main>
 
 <!-- FOOTER --> 
-    <footer class="border border-5 border-dark d-flex justify-content-end p-3">
+    <footer class="border-top border-bottom border-5 border-dark d-flex justify-content-end p-3">
         <a href="#top">
             <button type="button" class="btn btn-primary">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
