--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <section class="row g-0 ">
         <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
         <span class=" col-8 border-bottom border-5 border-dark"><img
-                src="assets/mm/x36-49 copie.png" class="img-fluid"></span>
+                src="assets/mm/logo_maillle_04.png" class="img-fluid"></span>
         <span class="violet col-2 border-start border-end border-bottom border-5 border-dark"></span>
     </section>
     
@@ -81,7 +81,7 @@
         <span class="col-10 d-flex flex-column justify-content-center align-items-center text-center 
         p-5 border-bottom border-end border-5 border-dark">
             <h3>Moga Studio</h3>
-            <p>Identité visuelle de l'initiative Moga Studio</p>
+            <p>Logotype de l'initiative Moga Studio</p>
             <a class="btn btn-primary mt-3" href="projets.html#moga_studio" role="button">Voir la suite</a>
         </span>
     </section>
