--- a/projets.html
+++ b/projets.html
@@ -24,44 +24,44 @@
 
 
 <!--Mona Margaux-->
-    <h2 id="mona_margaux" class="border-bottom border-start border-end border-5 border-dark">Mona Margaux</h2>
+    <h2 id="mona_margaux" class="p-4 border-bottom border-start border-end border-5 border-dark">Mona Margaux</h2>
     <section class="p-0 m-0 row col-12">
-        <span class="p-0 m-00 violet col-2"></span>
-        <div class="col-10 border-start border-end border-bottom border-5 border-dark p-3">
+        <span class="p-0 m-00 violet col-2 border-start border-end border-5 border-dark"></span>
+        <div class="col-10 p-3 border-bottom border-end border-5 border-dark">
             <h3>Webdesign & Graphisme</h3>
-            <p>Création d'un site web marchand, intelligent et fonctionnel. Sortie Avril 2023.
+            <p>-EN COURS- Créer et affirmer l'identité de marque de Mona Margaux. Conception de la charte graphique et de support de communication. Maquettage et intégration d'un site web marchand. Lancement du e-commerce : 25 mars 2023.
         </div>
     </section>
     <section class="mm1 row col-12 g-0">
-        <span class="violet col-2"></span>
-        <span class=" col-5 border-bottom-5 border-start border-5 border-dark"><img src="assets/mm/x36-49 copie.png" class="img-fluid"></span>
-        <span class=" col-5 border-end border-bottom-5 border-start border-5 border-dark"><img src="assets/mm/x36-49 copie.png" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class=" col-5 border-end border-5 border-dark"><img src="assets/mm/logo_maillle_04.png" class="img-fluid"></span>
+        <span class=" col-5 border-end border-5 border-dark"><img src="assets/mm/logo_maillle_04.png" class="img-fluid"></span>
     </section>
  
 
 <!--Moga Studio-->
-    <h2 id="moga_studio" class="p-4 border-bottom border-top border-5 border-dark" id="projets">Moga Studio</h2>
+    <h2 id="moga_studio" class="p-4 border border-5 border-dark" id="projets">Moga Studio</h2>
     <section class="p-0 m-0 row">
-        <span class="violet col-2 p-0 m-0"></span>
-        <div class="col-10 border-start border-end border-bottom border-5 border-dark p-3">
+        <span class="violet col-2 p-0 m-0 border-start border-end border-5 border-dark"></span>
+        <div class="col-10 p-3 border-bottom border-end border-5 border-dark">
             <h3>Identitié visuelle</h3>
-            <p>Création du logotype de l'initiative Moga Studio</p><br>
+            <p>Brief : créer un logotype avec la typographie Glacial Indifférence pour l'entreprise Moga Studio</p><br>
         </div>
     </section>
     <!--Mockup-->
     <section class="row g-0">
-        <span class="violet col-2"></span>
-        <span class="col-5 border-end border-bottom border-start border-5 border-dark"><img src="assets/moga/mock01_1:2.jpg" class="img-fluid"></span>
-        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/moga/mock01_2:2.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-5 border-end border-bottom border-5 border-dark"><img src="assets/moga/mock01_1:2.jpg" class="img-fluid"></span>
+        <span class="col-5 border-end border-bottom border-5 border-dark"><img src="assets/moga/mock01_2:2.jpg" class="img-fluid"></span>
     </section>
     <!--Brief-->
     <section class="row g-0">
-        <span class="violet col-2"></span>
-        <span class="col-2 border-start border-5 border-dark"><img src="assets/moga/brief01.jpg" class="img-fluid"></span>
-        <span class="col-2 border-start border-5 border-dark"><img src="assets/moga/brief02.jpg" class="img-fluid"></span>
-        <span class="col-2 border-start border-5 border-dark"><img src="assets/moga/brief03.jpg" class="img-fluid"></span>
-        <span class="col-2 border-start border-5 border-dark"><img src="assets/moga/brief04.jpg" class="img-fluid"></span>
-        <span class="col-2 border-start border-end border-5 border-dark"><img src="assets/moga/brief05.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-2 border-end border-5 border-dark"><img src="assets/moga/brief01.jpg" class="img-fluid"></span>
+        <span class="col-2 border-end border-5 border-dark"><img src="assets/moga/brief02.jpg" class="img-fluid"></span>
+        <span class="col-2 border-end border-5 border-dark"><img src="assets/moga/brief03.jpg" class="img-fluid"></span>
+        <span class="col-2 border-end border-5 border-dark"><img src="assets/moga/brief04.jpg" class="img-fluid"></span>
+        <span class="col-2 border-end border-5 border-dark"><img src="assets/moga/brief05.jpg" class="img-fluid"></span>
     </section>
 
 
@@ -69,40 +69,40 @@
 <!--à un phile-->
     <h2 id="a_un_phile" class="p-4 border border-5 border-dark" id="projets"><i>à un phile</i></h2>
     <section class="p-0 m-0 row col-12">
-        <span class="p-0 m-0 violet col-2"></span>
-        <div class="col-10 border-start border-end border-bottom border-5 border-dark p-3">
+        <span class="p-0 m-0 violet col-2 border-start border-end border-5 border-dark"></span>
+        <div class="col-10 p-3 border-bottom border-end border-5 border-dark">
             <h3>Mise en scène & Graphisme</h3>
         </div>
     </section>
     <section class="row g-0">
-        <span class="violet col-2"></span>
-        <span class="col-5 border-bottom border-start border-5 border-dark"><img src="assets/DET/DET bootstrap1.jpg" class="img-fluid"></span>
-        <span class="col-5 border-end border-bottom border-start border-5 border-dark"><img src="assets/DET/DET bootstrap2.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap1.jpg" class="img-fluid"></span>
+        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap2.jpg" class="img-fluid"></span>
     </section>
     <section class="row g-0">
-        <span class="violet col-2"></span>
-        <span class="col-5 border-bottom border-start border-5 border-dark"><img src="assets/DET/DET bootstrap3.jpg" class="img-fluid"></span>
-        <span class="col-5 border-end border-bottom border-start border-5 border-dark"><img src="assets/DET/DET bootstrap4.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap3.jpg" class="img-fluid"></span>
+        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap4.jpg" class="img-fluid"></span>
     </section>
     <section class="row g-0">
-        <span class="violet col-2"></span>
-        <span class="col-5 border-bottom border-start border-5 border-dark"><img src="assets/DET/DET bootstrap5.jpg" class="img-fluid"></span>
-        <span class="col-5 border-end border-bottom border-start border-5 border-dark"><img src="assets/DET/DET bootstrap6.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap5.jpg" class="img-fluid"></span>
+        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap6.jpg" class="img-fluid"></span>
     </section>
     <section class="row g-0">
-        <span class="violet col-2"></span>
-        <span class="col-5 border-bottom border-start border-5 border-dark"><img src="assets/DET/DET bootstrap7.jpg" class="img-fluid"></span>
-        <span class="col-5 border-end border-bottom border-start border-5 border-dark"><img src="assets/DET/DET bootstrap2.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap7.jpg" class="img-fluid"></span>
+        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap2.jpg" class="img-fluid"></span>
     </section>
     <section class="row g-0">
-        <span class="violet col-2"></span>
-        <span class="col-5 border-bottom border-start border-5 border-dark"><img src="assets/DET/DET bootstrap11.jpg" class="img-fluid"></span>
-        <span class="col-5 border-bottom border-start border-5 border-dark"><img src="assets/DET/DET bootstrap8.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap11.jpg" class="img-fluid"></span>
+        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap8.jpg" class="img-fluid"></span>
     </section> 
     <section class="row g-0">
-        <span class="violet col-2"></span>
-        <span class="col-5 border-start border-5 border-dark"><img src="assets/DET/DET bootstrap10.jpg" class="img-fluid"></span>
-        <span class="col-5 border-start border-5 border-dark"><img src="assets/DET/DET bootstrap9.jpg" class="img-fluid"></span>
+        <span class="violet col-2 border-start border-end border-5 border-dark"></span>
+        <span class="col-5 border-end border-5 border-dark"><img src="assets/DET/DET bootstrap10.jpg" class="img-fluid"></span>
+        <span class="col-5 border-end border-5 border-dark"><img src="assets/DET/DET bootstrap9.jpg" class="img-fluid"></span>
 
     </section>
 
@@ -110,29 +110,29 @@
 <!--Illustrations Manu-->
     <h2 id="illustrations_manu" class="p-4 border border-5 border-dark" id="projets">Illustration diverses</h2>
     <section class="p-0 m-0 row col-12">
-        <span class="p-0 m-0 violet col-3"></span>
-        <div class="col-9 border-start border-end border-bottom border-5 border-dark p-3">
+        <span class="p-0 m-0 violet col-3 border-start border-end border-5 border-dark"></span>
+        <div class="col-9 p-3 border-bottom border-end border-5 border-dark">
             <p>Illustrations réalisées en TD de formation à La Manu l'École des Métier du Numérique <br>Titre profesionnel Concepteur Designer UI RNCP35634<p>
         </div>
     </section>
     <!--Chris / Eliot / Lip -->
     <section class="row col-12 g-0">
-        <span class="violet col-3"></span>
-        <span class="first col-3 border-end border-bottom border-start border-5 border-dark"><img
+        <span class="violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="first col-3 border-bottom border-end border-5 border-dark"><img
                 src="assets/illustrations_manu/chris_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+        <span class="col-3 border-bottom border-end border-5 border-dark"><img
                 src="assets/illustrations_manu/eliot_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+        <span class="col-3 border-bottom border-end border-5 border-dark"><img
                 src="assets/illustrations_manu/lip_web.jpg" class="img-fluid"></span>
     </section>
     <!--Yoda / Darth / Boba -->
     <section class="row col-12 g-0">
-        <span class="violet col-3"></span>
-        <span class="col-3 border-end border-bottom border-start border-5 border-dark"><img
+        <span class="violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
                 src="assets/illustrations_manu/yoda_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+        <span class="col-3 border-end border-5 border-dark"><img
                 src="assets/illustrations_manu/darth-vador_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+        <span class="col-3 border-end border-5 border-dark"><img
                 src="assets/illustrations_manu/boba-fett_web.jpg" class="img-fluid"></span>
     </section>
 
@@ -140,8 +140,8 @@
 <!--Illustrations diverses-->
     <h2 id="illustrations_diverses" class="p-4 border border-5 border-dark" id="projets">Illustrations diverses</h2>
     <section class="p-0 m-0 row col-12">
-        <span class="p-0 m-00 violet col-3"></span>
-        <div class="col-9 border-right border-end border-start border-bottom border-5 border-dark p-3">
+        <span class="p-0 m-00 violet col-3 border-start border-end border-5 border-dark"></span>
+        <div class="col-9 p-3 border-bottom border-end border-5 border-dark">
             <h3>Illustrations et collages numériques</h3>
             <p>Créations spontanées entre juillet et novembre 2022</p>
         </div>
@@ -149,40 +149,40 @@
 
     <!--divi & love -->
     <section class="row col-12 g-0">
-        <span class="violet col-3"></span>
-        <span class="col-4 border-end border-bottom border-start border-5 border-dark"><img
+        <span class="violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="col-4 border-bottom border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/DIVA9_web.jpg" class="img-fluid"></span>
-        <span class="violet col-1 border-bottom border-5 border-dark"></span>
-        <span class="col-4 border-end border-bottom border-start border-5 border-dark"><img src="assets/illustrations_diverse/LOVE7_web.jpg" class="img-fluid"></span>
+        <span class="violet col-1 border-bottom border-end border-5 border-dark"></span>
+        <span class="col-4 border-bottom border-end border-5 border-dark"><img src="assets/illustrations_diverse/LOVE7_web.jpg" class="img-fluid"></span>
     </section>
     <!--Rope 01/02/03 -->
     <section class="row col-12 g-0">
-        <span class="violet col-3"></span>
-        <span class="first col-3 border-end border-bottom border-start border-5 border-dark"><img
+        <span class="violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="col-3 border-bottom border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/Rope01_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+        <span class="col-3 border-bottom border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/Rope02_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+        <span class="col-3 border-bottom border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/Rope03_web.jpg" class="img-fluid"></span>
     </section>
     <!--Stop 01/02/03 -->
     <section class="row col-12 g-0">
-        <span class="violet col-3"></span>
-        <span class="col-3 border-end border-bottom border-start border-5 border-dark"><img
+        <span class="violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="col-3 border-bottom border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/STOP01_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+        <span class="col-3 border-bottom border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/STOP02_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+        <span class="col-3 border-bottom border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/STOP03_web.jpg" class="img-fluid"></span>
     </section>
     <!--SW 01/02/03 -->
     <section class="row col-12 g-0">
-        <span class="first violet col-3"></span>
-        <span class="col-3 border-end border-bottom border-start border-5 border-dark"><img
+        <span class="violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/SW01_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+        <span class="col-3 border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/SW02_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+        <span class="col-3 border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/SW03_web.jpg" class="img-fluid"></span>
     </section>
 
@@ -190,15 +190,15 @@
 <!--Texture-->
     <h2 id="texture" class="p-4 border border-5 border-dark" id="projets">Création de texture</h2>
     <section class="p-0 m-0 row col-12">
-        <span class="p-0 m-0 violet col-3"></span>
-        <div class="col-9 border-start border-end border-bottom border-5 border-dark p-3">
-            <p>Création de texture en post-production, réalisé en 2022</p>
+        <span class="p-0 m-0 violet col-3 border-start border-end border-5 border-dark"></span>
+        <div class="col-9 p-3 border-bottom border-end border-5 border-dark">
+            <p>Création de texture en post-production, réalisé en 2022.</p>
         </div>
     </section>
     <!--Ceci est un exercice -->
     <section class="row col-12 g-0">
-        <span class="first violet col-3"></span>
-        <span class="col-3 border-end border-start border-bottom border-5 border-dark"><a><img
+        <span class="first violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="col-3 border-end border-bottom border-5 border-dark"><a><img
                 src="assets/texture/exercice-plastique1_web.jpg" class="img-fluid"></a></span>
         <span class="col-3 border-end border-bottom border-5 border-dark"><a><img
                 src="assets/texture/exercice-plastique2_web.jpg" class="img-fluid"></a></span>
@@ -207,8 +207,8 @@
     </section>
     <!--Texture sample -->
     <section class="row col-12 g-0">
-        <span class="first violet col-3"></span>
-        <span class="col-3 border-end border-start border-5 border-dark"><a><img
+        <span class="first violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="col-3 border-end border-5 border-dark"><a><img
                 src="assets/texture/alu01_web.jpg" class="img-fluid"></a></span>
         <span class="col-3 border-end border-5 border-dark"><a><img
                 src="assets/texture/plastic02_01_web.jpg" class="img-fluid"></a></span>
