correction overflow-X-Contact

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
     <section class="row g-0">
         <span class="violet col-2 border-start border-end border-5 border-dark"></span>
-        <span class="col-10 d-flex flex-column justify-content-center align-items-center text-center p-5 border-bottom border-5 border-dark">
+        <span class="col-10 d-flex flex-column justify-content-center align-items-center text-center p-5 border-bottom border-end border-5 border-dark">
             <h3>Recherches Textures</h3>
             <a class="btn btn-primary mt-3" href="projets.html#texture" role="button">Voir la suite</a>
         </span>
@@ -170,34 +170,28 @@
 
 <!--CONTACT-->
     <h2 class="border border-5 border-dark p-2">Contact</h2>
-    <div class="row" id="contact">
-        <div class="vert col-2 border-start border-end border-5 border-dark"></div>
-        <div class="col-8 border-end border-5 border-dark contact">
-            <p class="ms-4 fs-4 m-4">Vous avez déjà fait le tour ?<br>Vous avez apprécié ou avez envie de collaborer ?<br>Retrouvez-moi sur différents réseaux et n'hésitez pas à me laisser un message !</p>
-            <div class="ms-4 mb-2">
-                <img src="assets/icones_contact/icons_linkedin.png" alt="icone du réseau social Linkedin" class="icons">
-                <a href="https://www.linkedin.com/in/jbcharlemagne/" target="_blank" class="link_reseaux">Mon profil Linkedin</a>
+    <div class="contact row" id="contact">
+        <div class="vert col-2 border-start border-5 border-dark"></div>
+        <div class="col-8 border-start border-end border-5 border-dark">
+            <p class="m-2">Vous avez déjà fait le tour ? Vous avez apprécié ou avez envie de collaborer ?Retrouvez-moi sur différents réseaux et n'hésitez pas à me laisser un message !</p>
+            <div class="m-2">
+                <img src="assets/icones_contact/icons_linkedin.png" alt="icone du réseau social Linkedin" class="icons"><a href="https://www.linkedin.com/in/jbcharlemagne/" target="_blank">Mon profil Linkedin</a>
             </div>
-            <div class="ms-4 mb-2">
-                <img src="assets/icones_contact/icon_Instagram.png" alt="icone du réseau social Instagram" class="icons">
-                <a href="https://www.instagram.com/jb.charlemagne/" target="_blank" class="link_reseaux">Mon profil Instagram</a>
+            <div class="m-2">
+                <img src="assets/icones_contact/icon_Instagram.png" alt="icone du réseau social Instagram" class="icons"><a href="https://www.instagram.com/jb.charlemagne/" target="_blank">Mon profil Instagram</a>
             </div>
-            <div class="ms-4 mb-2">
-                <img src="assets/icones_contact/icon_Instagram.png" alt="icone du réseau social Behance" class="icons">
-                <a href="https://www.instagram.com/charlemagne.minimal/" target="_blank" class="link_reseaux">Mes photographies minimales</a>
+            <div class="m-2">
+                <img src="assets/icones_contact/icon_Instagram.png" alt="icone du réseau social Behance" class="icons"><a href="https://www.instagram.com/charlemagne.minimal/" target="_blank">Mes photographies minimales</a>
             </div>
-            <div class="ms-4 mb-2">
-                <img src="assets/icones_contact/icon_Behance.png" alt="icone du réseau social Behance" class="icons">
-                <a href="https://www.behance.net/jbcf" target="_blank" class="link_reseaux">Mon profil Behance</a>
+            <div class="m-2">
+                <img src="assets/icones_contact/icon_Behance.png" alt="icone du réseau social Behance" class="icons"><a href="https://www.behance.net/jbcf" target="_blank">Mon profil Behance</a>
             </div>
-            <div class="ms-4 mb-2">
-                <img src="assets/icones_contact/icon_mail.png" alt="adresse email de Jean-Baptsite Charlemagne" class="icons">
-                <a href="mailto:jbcharlemagne@hotmail.fr" class="link_reseaux">jbcharlemagne@hotmail.fr</a>
+            <div class="m-2">
+                <img src="assets/icones_contact/icon_mail.png" alt="adresse email de Jean-Baptsite Charlemagne" class="icons"><a href="mailto:jbcharlemagne@hotmail.fr">jbcharlemagne@hotmail.fr</a>
             </div>
-            <div  class="ms-4 mb-5">
-                <img src="assets/icones_contact/icon_siteWeb.png" alt="icone du réseau social Behance" class="icons">
-                <a href="https://jbcharlemagne.github.io/portfolio_beauxarts" target="_blank" class="link_reseaux">Découvrir la suite</a>
-                </div>
+            <div class="m-2">
+                <img src="assets/icones_contact/icon_siteWeb.png" alt="icone du réseau social Behance" class="icons"><a href="https://jbcharlemagne.github.io/portfolio_beauxarts" target="_blank">Découvrir la suite</a>
+            </div>
         </div>
         <div class="vert col-2 border-end border-5 border-dark"></div>
     </div>
@@ -216,12 +210,3 @@
 </body>
 
 </html>
-
-
-
-
-
-<!-- <div class="row border border-5 border-dark">
-    <div class="violet col-8 "></div>
-    <div class="col-4"><br></div>
-</div>-->
