--- a/projets.html
+++ b/projets.html
@@ -96,12 +96,12 @@
     </section>
     <section class="row g-0">
         <span class="violet col-2 border-start border-end border-5 border-dark"></span>
-        <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap11.jpg" class="img-fluid"></span>
+        <span class="col-5 border-end border-bottom border-5 border-dark"><img src="assets/DET/DET bootstrap10.jpg" class="img-fluid"></span>
         <span class="col-5 border-bottom border-end border-5 border-dark"><img src="assets/DET/DET bootstrap8.jpg" class="img-fluid"></span>
     </section> 
     <section class="row g-0">
         <span class="violet col-2 border-start border-end border-5 border-dark"></span>
-        <span class="col-5 border-end border-5 border-dark"><img src="assets/DET/DET bootstrap10.jpg" class="img-fluid"></span>
+        <span class="col-5 border-end border-5 border-dark"><img src="assets/DET/DET bootstrap11.jpg" class="img-fluid"></span>
         <span class="col-5 border-end border-5 border-dark"><img src="assets/DET/DET bootstrap9.jpg" class="img-fluid"></span>
 
     </section>
