--- a/cv.html
+++ b/cv.html
@@ -12,21 +12,21 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg bg-light" id="top">
+    <nav class="navbar navbar-expand-lg bg-light border border-5 border-dark" id="top">
         <div class="container-fluid">
         <a class="navbar-brand" href="index.html">Accueil</a>
         </div>
     </nav>
 
     <main>
-        <h2 class="border-top border-bottom border-5 border-dark p-3">Curriculum Vitae</h2>
-        <div class="m-50">
+        <h2 class="border-start border-end border-5 border-dark p-3 m-0">Curriculum Vitae</h2>
+        <div class="m-50 border border-5 border-dark">
             <img src="assets/CV/CV_2023.jpg" class="img-fluid">
         </div>
     </main>
 
 <!-- FOOTER --> 
-    <footer class="border-top border-bottom border-5 border-dark d-flex justify-content-end p-3">
+    <footer class="border-start border-end border-bottom border-5 border-dark d-flex justify-content-end p-3">
         <a href="#top">
             <button type="button" class="btn btn-primary">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
