--- a/projets.html
+++ b/projets.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg sticky-top bg-light border-top border-bottom border-5 border-dark">
+    <nav class="navbar navbar-expand-lg sticky-top bg-light border border-5 border-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">Accueil</a>
         </div>
