remind enlever les <a>

--- a/projets.html
+++ b/projets.html
@@ -198,22 +198,22 @@
     <!--Ceci est un exercice -->
     <section class="row col-12 g-0">
         <span class="first violet col-3 border-start border-end border-5 border-dark"></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><a><img
-                src="assets/texture/exercice-plastique1_web.jpg" class="img-fluid"></a></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><a><img
-                src="assets/texture/exercice-plastique2_web.jpg" class="img-fluid"></a></span>
-        <span class="col-3 border-end border-bottom border-5 border-dark"><a><img
-                src="assets/texture/exercice-plastique3_web.jpg" class="img-fluid"></a></span>
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+                src="assets/texture/exercice-plastique1_web.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+                src="assets/texture/exercice-plastique2_web.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+                src="assets/texture/exercice-plastique3_web.jpg" class="img-fluid"></span>
     </section>
     <!--Texture sample -->
     <section class="row col-12 g-0">
         <span class="first violet col-3 border-start border-end border-5 border-dark"></span>
-        <span class="col-3 border-end border-5 border-dark"><a><img
-                src="assets/texture/alu01_web.jpg" class="img-fluid"></a></span>
-        <span class="col-3 border-end border-5 border-dark"><a><img
-                src="assets/texture/plastic02_01_web.jpg" class="img-fluid"></a></span>
-        <span class="col-3 border-end border-5 border-dark"><a><img
-                src="assets/texture/plastic02_02_web.jpg" class="img-fluid"></a></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/texture/alu01_web.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/texture/plastic02_01_web.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/texture/plastic02_02_web.jpg" class="img-fluid"></span>
     </section>
 
 <!--FOOTER-->
