ajout profil github

--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
             <div class="m-2">
                 <img src="assets/icones_contact/icon_mail.png" alt="adresse email de Jean-Baptsite Charlemagne" class="icons"><a href="mailto:jbcharlemagne@hotmail.fr">jbcharlemagne@hotmail.fr</a>
             </div>
+            <div class="m-2">
+                <img src="assets/icones_contact/icon_siteWeb.png" alt="icone du réseau social Behance" class="icons"><a href="https://github.com/jbcharlemagne/portfolio_graphisme" target="_blank">Pour découvir la conception de ce site</a>
+            </div>
             <div class="m-2 mb-4">
                 <img src="assets/icones_contact/icon_siteWeb.png" alt="icone du réseau social Behance" class="icons"><a href="https://jbcharlemagne.github.io/portfolio_beauxarts" target="_blank">Découvrir la suite</a>
             </div>
