--- a/projets.html
+++ b/projets.html
@@ -29,7 +29,9 @@
         <span class="p-0 m-00 violet col-2 border-start border-end border-5 border-dark"></span>
         <div class="col-10 p-3 border-bottom border-end border-5 border-dark">
             <h3>Webdesign & Graphisme</h3>
-            <p>-EN COURS- Créer et affirmer l'identité de marque de Mona Margaux. Conception de la charte graphique et de support de communication. Maquettage et intégration d'un site web marchand. Lancement du e-commerce : 25 mars 2023.
+            <p>Créer et affirmer l'identité de marque de Mona Margaux.<br>
+            Conception de la charte graphique et de support de communication.<br>
+            Maquettage et intégration d'un site web marchand : <a target="_blank" href="https://monamargaux.com">monamargaux.com</a>.</p>
         </div>
     </section>
     <section class="mm1 row col-12 g-0">
@@ -184,6 +186,16 @@
                 src="assets/illustrations_diverse/SW02_web.jpg" class="img-fluid"></span>
         <span class="col-3 border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/SW03_web.jpg" class="img-fluid"></span>
+    </section>
+    <!--PIPES -->
+    <section class="row col-12 g-0">
+        <span class="violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/pipes01.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/pipes02.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/pipes03.jpg" class="img-fluid"></span>
     </section>
 
    
