modif intro pour alternance, correction image assets, ajout point aux lignes

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
     <div class="parcours row">
         <div class="vert col-2 border-bottom border-start border-5 border-dark"></div> 
         <div class="col-10 m-0 p-0">
-            <p class="border-start border-bottom border-end border-5 border-dark p-4 fs-5 fw-bold">À la recherche d'un contrat de professionnalisation en agence de design pour septembre 2023 : Certification profesionnelle Concepteur Réalisateur Graphique à
-            Gobelins, l'École de l'image</p>
+            <p class="border-start border-bottom border-end border-5 border-dark p-4 fs-5"><strong>-! À la recherche d'un contrat de professionnalisation en agence de design pour septembre 2023</strong> : Certification profesionnelle Concepteur Réalisateur Graphique à
+            Gobelins, l'École de l'image <strong>!-</strong></p>
         </div>
     </div>
    
