--- a/projets.html
+++ b/projets.html
@@ -31,7 +31,7 @@
             <h3>Webdesign & Graphisme</h3>
             <p>Créer et affirmer l'identité de marque de Mona Margaux.<br>
             Conception de la charte graphique et de support de communication.<br>
-            Maquettage et intégration d'un site web marchand : <a target="_blank" href="https://monamargaux.com">monamargaux.com</a>.</p>
+            Maquettage et intégration d'un site web marchand : <a class="MM" target="_blank" href="https://monamargaux.com">monamargaux.com</a>.</p>
         </div>
     </section>
     <section class="mm1 row col-12 g-0">
@@ -47,7 +47,7 @@
         <span class="violet col-2 p-0 m-0 border-start border-end border-5 border-dark"></span>
         <div class="col-10 p-3 border-bottom border-end border-5 border-dark">
             <h3>Identitié visuelle</h3>
-            <p>Brief : créer un logotype avec la typographie Glacial Indifférence pour l'entreprise Moga Studio</p><br>
+            <p>Brief : créer un logotype avec la typographie Glacial Indifférence pour l'entreprise Moga Studio.</p><br>
         </div>
     </section>
     <!--Mockup-->
@@ -114,7 +114,7 @@
     <section class="p-0 m-0 row col-12">
         <span class="p-0 m-0 violet col-3 border-start border-end border-5 border-dark"></span>
         <div class="col-9 p-3 border-bottom border-end border-5 border-dark">
-            <p>Illustrations réalisées en TD de formation à La Manu l'École des Métier du Numérique <br>Titre profesionnel Concepteur Designer UI RNCP35634<p>
+            <p>Illustrations réalisées en TD de formation à La Manu l'École des Métier du Numérique. <br>Titre profesionnel Concepteur Designer UI RNCP35634.<p>
         </div>
     </section>
     <!--Chris / Eliot / Lip -->
@@ -144,8 +144,7 @@
     <section class="p-0 m-0 row col-12">
         <span class="p-0 m-00 violet col-3 border-start border-end border-5 border-dark"></span>
         <div class="col-9 p-3 border-bottom border-end border-5 border-dark">
-            <h3>Illustrations et collages numériques</h3>
-            <p>Créations spontanées entre juillet et novembre 2022</p>
+            <p>Créations spontanées entre juillet 2022 et avril 2023.</p>
         </div>
     </section>
 
