ajout still doin' it

--- a/projets.html
+++ b/projets.html
@@ -179,22 +179,32 @@
     <!--SW 01/02/03 -->
     <section class="row col-12 g-0">
         <span class="violet col-3 border-start border-end border-5 border-dark"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/SW01_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/SW02_web.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
-                src="assets/illustrations_diverse/SW03_web.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
+                src="assets/illustrations_diverse/SW03_web.jpg" class="img-fluid "></span>
     </section>
     <!--PIPES -->
     <section class="row col-12 g-0">
         <span class="violet col-3 border-start border-end border-5 border-dark"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/pipes01.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/pipes02.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/pipes03.jpg" class="img-fluid"></span>
+    </section>
+      <!--STILL -->
+    <section class="row col-12 g-0">
+        <span class="violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/still01.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/still02.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/still03.jpg" class="img-fluid"></span>
     </section>
 
    
