--- a/projets.html
+++ b/projets.html
@@ -206,6 +206,16 @@
         <span class="col-3 border-end border-5 border-dark"><img
                 src="assets/illustrations_diverse/still03.jpg" class="img-fluid"></span>
     </section>
+      <!--STILL -->
+      <section class="row col-12 g-0">
+        <span class="violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/rock01.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/rock02.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/rock03.jpg" class="img-fluid"></span>
+    </section>
 
    
 <!--Texture-->
