--- a/projets.html
+++ b/projets.html
@@ -199,22 +199,32 @@
       <!--STILL -->
     <section class="row col-12 g-0">
         <span class="violet col-3 border-start border-end border-5 border-dark"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/still01.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
+        <span class="col-3 border-end bborder-bottom order-5 border-dark"><img
                 src="assets/illustrations_diverse/still02.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/still03.jpg" class="img-fluid"></span>
     </section>
-      <!--STILL -->
+      <!--ROCK -->
       <section class="row col-12 g-0">
         <span class="violet col-3 border-start border-end border-5 border-dark"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/rock01.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/rock02.jpg" class="img-fluid"></span>
-        <span class="col-3 border-end border-5 border-dark"><img
+        <span class="col-3 border-end border-bottom border-5 border-dark"><img
                 src="assets/illustrations_diverse/rock03.jpg" class="img-fluid"></span>
+    </section>
+    <!--TRANSPORT -->
+    <section class="row col-12 g-0">
+        <span class="violet col-3 border-start border-end border-5 border-dark"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/transport01.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/transport02.jpg" class="img-fluid"></span>
+        <span class="col-3 border-end border-5 border-dark"><img
+                src="assets/illustrations_diverse/transport03.jpg" class="img-fluid"></span>
     </section>
 
    
