--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
     <main>
         <h2 class="border-start border-end border-5 border-dark p-3 m-0">Curriculum Vitae</h2>
         <div class="m-50 border border-5 border-dark">
-            <img src="assets/CV/CV_DA_TeamCréa.png" class="img-fluid">
+            <img src="assets/CV/CV_DA_TeamCrea.pdf" class="img-fluid">
         </div>
     </main>
 
