--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <div class="parcours row">
         <div class="vert col-2 border-bottom border-start border-5 border-dark"></div> 
         <div class="col-10 m-0 p-0">
-            <p class="border-start border-bottom border-end border-5 border-dark p-4 fs-5"><strong>-! À la recherche d'un contrat de professionnalisation en agence de design pour septembre 2023</strong> : Certification profesionnelle Concepteur Réalisateur Graphique à
-            Gobelins, l'École de l'image <strong>!-</strong></p>
+            <p class="border-start border-bottom border-end border-5 border-dark p-4 fs-5"><strong>-! À la recherche d'un contrat d'apprentissage en motion design<strong>!-</strong> Septembre 2024 : Certification profesionnelle Graphiste Motion Designer à Gobelins Paris</p>
         </div>
     </div>
    
@@ -298,7 +297,7 @@
     <div class="parcours row">
         <div class="jaune col-2 border-start border-end border-5 border-dark"></div>
         <div class="col-8 border-end border-5 border-dark text-start">
-            <h3 class="mt-5">Graphiste & Designer UI/UX</h3>
+            <h3 class="mt-5">Graphiste & Motion Designer</h3>
             <p class="fs-6">Implanté à Paris et diplômé du Titre professionnel Concepteur Desginer UI, je suis habitué de la création et à multiplier mes médiums. Je suis également passionné par photographie minimale.</p>
             <a class="btn btn-primary m-4" href="cv.html" role="button">Voir mon CV</a>
         </div>
