--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="jaune col-2 border-start border-end border-5 border-dark"></div>
         <div class="col-8 border-end border-5 border-dark text-start">
             <h3 class="mt-5">Graphiste & Motion Designer</h3>
-            <p class="fs-6">Implanté à Paris et diplômé du Titre professionnel Concepteur Desginer UI, je suis habitué de la création et à multiplier mes médiums. Je suis également passionné par photographie minimale.</p>
+            <p class="fs-6">Implanté à Paris et diplômé après deux expériences réussies en Web puis en Print, je cherche à compléter ma palette de compétences techniques avec le Motion Design. Je suis également passionné par la photographie minimale.</p>
             <a class="btn btn-primary m-4" href="cv.html" role="button">Voir mon CV</a>
         </div>
         <div class="jaune col-2 d-flex align-items-center border-end border-5 border-dark"><img src="assets/photo_aPropos/sélection02.jpg" alt="portrait de Jean-Baptiste Charlemagne" class="img-fluid p-2"></div>
